# soulofclay-schema

./: Cargo.toml  README.md  brand.json  index.html  output.html  products.json  sitemap.xml
.github/workflows/: deploy.yml
docs/: brand.json  index.html  output.html  robots.txt  sitemap_index.xml
src/: main.rs
