[package]
name = "untitled"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
regex = "1.10"
sha2 = "0.10"
